# Old-Repositories

./: download.bash
used-by-crates.io/c-like-concat/: Cargo.toml
used-by-crates.io/cargo-vika/: Cargo.toml  README.md
used-by-crates.io/const-trig/: Cargo.toml
used-by-crates.io/const-trig/src/: log.rs
used-by-crates.io/qqx-macro/: Cargo.toml  README.md
used-by-crates.io/qqx-macro/src/: lib.rs  polygon.rs
used-by-crates.io/qqx3d/: Cargo.toml  README.md
used-by-crates.io/qqx3d/src/: lib.rs
useless/language-attempts/Mpl/: CMakeLists.txt  example.mpl
useless/language-attempts/Mpl/Compiler/: config.txt  main.cpp
useless/rest/Arrows/: .gitignore  Cargo.toml
useless/rest/Arrows/src/: lib.rs  main.rs
useless/rest/Calculator/: CMakeLists.txt  Calculator.hpp  README.md  Test.hpp  main.cpp
useless/rest/EBot/: .gitignore  Makefile  README.md  button.py  convert_time_from_unix.py  init.py  iterate_through_modules_in_cwd.py  main.py  requirements.txt
useless/rest/EBot/assets/: GDConsoleGuide.md
useless/rest/EBot/commands/: __helper.py  __init__.py  email.py  gdclientsecretsguide.py  help.py  preferredstorage.py  setemail.py  setpreferredstorage.py  start.py  storage.py
useless/rest/EBot/database/: interface.py
useless/rest/EBot/e_mail/: __init__.py  send.py  send_raw.py  text2html.py
useless/rest/EBot/listeners/: __helper.py  __init__.py  (+2 more)
useless/rest/Echolocation/: .gitignore  Makefile  README.md  bush.cpp  bush.h  drip.cpp  drip.h  echo.cpp  echo.h  geometry.cpp  geometry.h  icon.png~  level.cpp  level.h  main.cpp  model.cpp  model.h  model.png~  player.cpp  player.h  sound.h
useless/rest/ElW/: CMakeLists.txt
useless/rest/GL/: CMakeLists.txt  main.cpp
useless/rest/GLCXX/: CMakeLists.txt  README.md
useless/rest/GLCXX/include/: Color.hpp  Image.hpp  Keyboard.hpp  Low.hpp  Main.hpp
useless/rest/GLCXX/include/Figures/: Quadrangle.hpp  Triangle.hpp
useless/rest/GLCXX/include/System/: Config.hpp  Drawable.hpp  Geometry.hpp
useless/rest/GLCXX/include/Window/: Cursor.hpp  Event.hpp  Monitor.hpp  VideoMode.hpp  View.hpp  Window.hpp
useless/rest/GLCXX/src/: Color.cpp  Cursor.cpp  Event.cpp  Image.cpp  Keyboard.cpp  Low.cpp  Main.cpp  Monitor.cpp  Quadrangle.cpp  Triangle.cpp  View.cpp  Window.cpp
useless/rest/GLCXX/src/glad/: glad.c  glad.h
useless/rest/GLCXX/src/stb_image/: implementation.c
useless/rest/JaOS/: Cargo.toml  README.md
useless/rest/JaOS/.cargo/: config.toml
useless/rest/JaOS/src/: allocator.rs  enum.rs  gdt.rs  hash.rs  hdd.rs  idt.rs  keyboard.rs  lib.rs  main.rs  oll.rs  time.rs  tty.rs
useless/rest/JaOS/src/page/: mod.rs  types.rs
useless/rest/JaOS/src/pci/: class_name.rs  mod.rs  pib.rs  subclass.rs
useless/rest/Jandex-projekt/: a.py
useless/rest/Kass/: .gitignore
useless/rest/Labyrinth/: .gitignore  Cargo.toml
useless/rest/Minesweeper/: README.md  main.py
useless/rest/Nikita/: .gitignore  auth.py  config.py  dataset.py  main.py  Презентация.pptx
useless/rest/school-project/: Dockerfile  code  result  result.ll
(+75 files in other folders)
