[package]
name = "qqx"
version = "0.0.4"
authors = ["Roman <qqx.3d.rs@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
description = "qqx is a 3d library for rust based on OpenGL"
repository = "https://github.com/OrbitalStation/Old-Repositories/tree/cosmos/used-by-crates.io/qqx3d"
readme = "README.md"
documentation = "https://docs.rs/qqx"
keywords = ["graphic", "graphics", "game"]
categories = ["game-development", "games", "gui", "graphics"]

[dependencies]
glium = "0.30.1"
ctor = "0.1.20"
qqx-macro = "0.0.4"
