[package]
name = "os"
version = "0.1.0"
authors = ["Роман <romann.tarasenko@gmail.com>"]
edition = "2018"

[features]
#pci = []
#hdd = []
#oll = []
tty = []
#time = []
#hash = []
enum = []
page = []
keyboard = []
allocator = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# [package.metadata.bootimage]
# run-command = ["qemu-system-x86_64", "-hdd", "disk.img", "-drive", "format=raw,file=target/x86-64/debug/bootimage-os.bin"]

[dependencies]
bootloader = { version = "0.9.8", features = ["map_physical_memory"]}
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
pic8259 = "0.10.1"
linked_list_allocator = "0.9.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2.0"
default-features = false
